# imp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.husky/: pre-push
crates/: README.md
crates/imp_backend/: Cargo.toml
crates/imp_backend/src/: lib.rs
crates/imp_backend/src/app/: facade.rs  mod.rs
crates/imp_backend/src/domain/: mod.rs
crates/imp_backend/src/domain/entity/: message.rs  mod.rs  peer.rs
crates/imp_backend/src/domain/vo/: mod.rs
crates/imp_backend/src/domain/vo/peer/: id.rs  mod.rs
crates/imp_ddd/: Cargo.toml
crates/imp_ddd/src/: entity.rs  lib.rs  version.rs  vo.rs
crates/imp_ddd_derive/: Cargo.toml
crates/imp_ddd_derive/src/: lib.rs
crates/imp_i18n/: Cargo.toml
crates/imp_kernel/: Cargo.toml
crates/imp_kernel/src/: lib.rs
crates/imp_kernel/src/v1/: kernel.rs  mod.rs
crates/imp_message/: Cargo.toml
crates/imp_message/src/: message.rs
crates/imp_plugin/: Cargo.toml
crates/imp_plugin/src/: lib.rs  plugin.rs
crates/imp_plugin_manager/: Cargo.toml
crates/imp_plugin_manager/src/: lib.rs
crates/imp_runtime/: Cargo.toml
crates/imp_runtime/src/: lib.rs  runtime.rs
docs/: README.md  design.drawio  design.md  domain-analysis.md  tech-notes.md
src/: gui.rs  lib.rs  main.rs  message.rs  model.rs
src/app/: imp.rs  mod.rs
src/domain/: mod.rs
src/domain/entity/: message.rs  mod.rs  peer.rs
src/util/: mod.rs
src/util/ddd/: mod.rs  version.rs
