[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
anyhow = { version = "1" }
thiserror = { version = "2" }

[dependencies]
anyhow = { workspace = true }
cfg-if = { version = "1" }
chrono = { version = "0.4" }
crossterm = { version = "0.28", optional = true }
iced = { version = "0.13", optional = true }
imp_message = { version = "1", path = "crates/imp_message" }
ratatui = { version = "0.29", optional = true }
redb = { version = "2" }
thiserror = { workspace = true }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1", features = ["fast-rng", "v4", "v7"] }

[features]
default = ["gui"]
headless = []
gui = ["headless", "iced"]
tui = ["crossterm", "headless", "ratatui"]
