[package]
name = "imp"
version = "0.1.0"
edition = "2021"
authors = ["FilaCo <awesome.chekushka@gmail.com>"]
license = "GPL-3"
readme = "README.md"
keywords = ["instant-messaging", "messaging", "peer-to-peer", "p2p"]
repository = "https://github.com/FilaCo/imp"
documentation = "https://docs.rs/imp"
description = """
IMP is a serverless peer-to-peer instant messaging protocol that aims to provide:
1. Applications for the majority of platforms (Windows/Linux/macOS, Android/iOS and Web client).
2. A simple yet powerful SDK for developing integrations, extensions or custom client applications.
"""
exclude = [".github/", ".husky/", ".commitlintrc.json", ".releaserc.json", "package-*.json"]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = { version = "1" }
bytes = { version = "1" }
cfg-if = { version = "1" }
chrono = { version = "0.4" }
crossterm = { version = "0.28", optional = true }
iced = { version = "0.13", optional = true }
# iceoryx2 = { version = "0.4" }
libp2p = { version = "0.54" }
ratatui = { version = "0.29", optional = true }
redb = { version = "2" }
thiserror = { version = "2" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1", features = ["fast-rng", "v4", "v7"] }

[features]
default = ["gui"]
headless = []
gui = ["headless", "iced"]
tui = ["crossterm", "headless", "ratatui"]
